--- a/virtual-keyboard/style.css
+++ b/virtual-keyboard/style.css
@@ -417,14 +417,14 @@ body {
   background-color: #444344;
 }
 
-.keyboard__key.ShiftLeft,
-.keyboard__key.ShiftRight {
+.keyboard__key.ShiftLeft {
   flex: 0.92;
   background-color: #444344;
 }
 
-.keyboard__key.AltLeft,
+.keyboard__key.ShiftRight,
 .keyboard__key.AltRight,
+.keyboard__key.AltLeft,
 .keyboard__key.MetaLeft,
 .keyboard__key.MetaRight {
   background-color: #444344;
